--- a/day13-entities-code_tag/index.htm
+++ b/day13-entities-code_tag/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>code tag</title>
 </head>
 <body>
     this is the code for paragraph &lt;p&gt;&lt;/p&gt;
